bitfield/tests/11-bits-attribute-wrong.stderr
error[E0080]: evaluation of constant value failed
 --> tests/11-bits-attribute-wrong.rs:9:1
  |
9 | #[bitfield]
  | ^^^^^^^^^^^ the evaluated program panicked at 'expected TriggerMode to be of size 9', $DIR/tests/11-bits-attribute-wrong.rs:9:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)
